--- a/src/transform/Doing Business.ipynb
+++ b/src/transform/Doing Business.ipynb
@@ -50,7 +50,7 @@
     "iso_codes['id'] = pd.Series(range(len(iso_codes)), name='id')\n",
     "\n",
     "f = open(\"../repository/RAW/WB - Doing Business.csv\", mode=\"r\", encoding=\"utf-8\")\n",
-    "df = pd.read_csv(f, sep=\";\", index_col=False)\n",
+    "df = pd.read_csv(f, sep=\";\", index_col=False, decimal=',')\n",
     "df = df.dropna(how=\"all\").convert_dtypes()"
    ]
   },
@@ -254,6 +254,9 @@
     "df = df[[\"country_id\", \"year\", *df.columns]]\n",
     "df = df.drop(columns=[\"country_code\"])\n",
     "df = df.loc[:, ~df.columns.duplicated()].copy()\n",
+    "df[\"labor_tax_and_contributions\"] = (\n",
+    "    df[\"labor_tax_and_contributions\"].str.replace(\"No Practice\", \"0\").astype(float)\n",
+    ")\n",
     "list(df.columns)"
    ]
   },
@@ -295,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
