--- a/src/transform/World Governance Index.ipynb
+++ b/src/transform/World Governance Index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +65,32 @@
     "    _df = pd.read_csv(f, sep=\";\", decimal=\",\")\n",
     "    ptrn = re.compile(\"\\d{4}\")\n",
     "    join_dfs = []\n",
-    "    for k, d in _df.T.groupby(lambda x: re.search(ptrn, x).group() if re.search(ptrn, x) else None): # type: ignore\n",
+    "    for k, d in _df.T.groupby(lambda x: re.search(ptrn, x).group() if re.search(ptrn, x) else None):  # type: ignore\n",
     "        country_code = _df.copy(deep=True)\n",
-    "        country_code, country_code.columns = country_code[1:] , country_code.iloc[0]\n",
+    "        country_code, country_code.columns = country_code[1:], country_code.iloc[0]\n",
     "        d = d.T\n",
-    "        d, d.columns = d[1:] , d.iloc[0]\n",
-    "        d['Year'] = k\n",
+    "        d, d.columns = d[1:], d.iloc[0]\n",
+    "        d[\"Year\"] = k\n",
     "        d = d.assign(country_code=country_code.iloc[:, 1])\n",
     "        join_dfs.append(d)\n",
     "    _df = reduce(lambda x, y: pd.concat([x, y]), join_dfs)\n",
-    "    _df = _df.merge(iso_codes.iloc[:, [-1, 0, 2]], left_on=\"country_code\", right_on=\"alpha-3\")\n",
-    "    _df = _df.drop(axis=1, columns=['country_code', 'name', 'alpha-3'])\n",
-    "    _df = _df.rename(columns={'id': 'country_id'})\n",
-    "    _df = _df[['country_id', 'Year', *_df.columns]]\n",
-    "    _df = _df.loc[:,~_df.columns.duplicated()].copy()\n",
+    "    _df = _df.merge(\n",
+    "        iso_codes.iloc[:, [-1, 0, 2]], left_on=\"country_code\", right_on=\"alpha-3\"\n",
+    "    )\n",
+    "    _df = _df.drop(axis=1, columns=[\"country_code\", \"name\", \"alpha-3\"])\n",
+    "    _df = _df.rename(columns={\"id\": \"country_id\"})\n",
+    "    _df = _df[[\"country_id\", \"Year\", *_df.columns]]\n",
+    "    _df = _df.loc[:, ~_df.columns.duplicated()].copy()\n",
     "    _df = _df.rename(str.lower, axis=\"columns\")\n",
     "    _df.columns = _df.columns.str.replace(\" \", \"_\")\n",
+    "    _df[\"year\"] = _df[\"year\"].astype(\"int64\")\n",
+    "    _df[\"rank\"] = _df[\"rank\"].str.replace(\",\", \".\").astype(\"float32\")\n",
     "    dfs.update({name: _df})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +101,7 @@
     "    if not any(matches):\n",
     "        ctgry = 'State Governance'\n",
     "    # df.to_csv(f\"../repository/DUMP/WGI/{name.replace('.CSV', '').strip()} - {ctgry}.csv\", sep=\";\", index=False, decimal='.')\n",
-    "    df.to_sql(name.split('-')[1].replace('.CSV', '').strip(), con=conn, index_label='id')\n",
-    "    "
+    "    df.to_sql(name.split('-')[1].replace('.CSV', '').strip(), con=conn, index_label='id', if_exists='replace')"
    ]
   }
  ],
@@ -118,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
