Added country religious freedom status

--- a/src/dags/sandbox.ipynb
+++ b/src/dags/sandbox.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ti_civil_rights = pl.read_database(\n",
+    "ti_freedom_right = pl.read_database(\n",
     "    query=\"\"\"\n",
-    "    SELECT country_id, year, civil_rights \n",
-    "    FROM \"freedom\" \n",
-    "    ORDER BY country_id\n",
+    "    SELECT country_id, no_interference_of_religious_dogmas\n",
+    "    FROM freedom\n",
+    "    WHERE year = 2020\n",
+    "    ORDER BY country_id                                        \n",
     "    \"\"\",\n",
     "    connection=conn_ti,\n",
-    ")"
+    ")\n",
+    "status = {\n",
+    "    (0, 3): \"NOT FREE\",\n",
+    "    (3, 6): \"VERY INTOLERANT\",\n",
+    "    (6, 9): \"MODERATELY FREE\",\n",
+    "    (9, 10): \"MOSTLY FREE\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -63,31 +70,46 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (7, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>year</th><th>civil_rights</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>2010</td><td>5.747748</td></tr><tr><td>2012</td><td>5.666667</td></tr><tr><td>2014</td><td>5.508929</td></tr><tr><td>2016</td><td>5.339286</td></tr><tr><td>2018</td><td>5.232143</td></tr><tr><td>2020</td><td>5.183333</td></tr><tr><td>2022</td><td>4.975</td></tr></tbody></table></div>"
+       "<small>shape: (120, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>country_id</th><th>no_interference_of_religious_dogmas</th><th>status</th></tr><tr><td>i64</td><td>f64</td><td>str</td></tr></thead><tbody><tr><td>0</td><td>3.0</td><td>&quot;VERY INTOLERAN…</td></tr><tr><td>2</td><td>10.0</td><td>&quot;COMPLETELY FRE…</td></tr><tr><td>3</td><td>6.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>6</td><td>10.0</td><td>&quot;COMPLETELY FRE…</td></tr><tr><td>10</td><td>10.0</td><td>&quot;COMPLETELY FRE…</td></tr><tr><td>11</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>15</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>17</td><td>6.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>18</td><td>6.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>20</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>23</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>25</td><td>7.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>225</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>226</td><td>7.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>227</td><td>5.0</td><td>&quot;VERY INTOLERAN…</td></tr><tr><td>228</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>231</td><td>7.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>232</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr><tr><td>233</td><td>7.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>237</td><td>10.0</td><td>&quot;COMPLETELY FRE…</td></tr><tr><td>238</td><td>8.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>246</td><td>3.0</td><td>&quot;VERY INTOLERAN…</td></tr><tr><td>247</td><td>8.0</td><td>&quot;MODERATELY FRE…</td></tr><tr><td>248</td><td>9.0</td><td>&quot;MOSTLY FREE&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (7, 2)\n",
-       "┌──────┬──────────────┐\n",
-       "│ year ┆ civil_rights │\n",
-       "│ ---  ┆ ---          │\n",
-       "│ i64  ┆ f64          │\n",
-       "╞══════╪══════════════╡\n",
-       "│ 2010 ┆ 5.747748     │\n",
-       "│ 2012 ┆ 5.666667     │\n",
-       "│ 2014 ┆ 5.508929     │\n",
-       "│ 2016 ┆ 5.339286     │\n",
-       "│ 2018 ┆ 5.232143     │\n",
-       "│ 2020 ┆ 5.183333     │\n",
-       "│ 2022 ┆ 4.975        │\n",
-       "└──────┴──────────────┘"
+       "shape: (120, 3)\n",
+       "┌────────────┬───────────────────────────────────┬─────────────────┐\n",
+       "│ country_id ┆ no_interference_of_religious_dog… ┆ status          │\n",
+       "│ ---        ┆ ---                               ┆ ---             │\n",
+       "│ i64        ┆ f64                               ┆ str             │\n",
+       "╞════════════╪═══════════════════════════════════╪═════════════════╡\n",
+       "│ 0          ┆ 3.0                               ┆ VERY INTOLERANT │\n",
+       "│ 2          ┆ 10.0                              ┆ COMPLETELY FREE │\n",
+       "│ 3          ┆ 6.0                               ┆ MODERATELY FREE │\n",
+       "│ 6          ┆ 10.0                              ┆ COMPLETELY FREE │\n",
+       "│ …          ┆ …                                 ┆ …               │\n",
+       "│ 238        ┆ 8.0                               ┆ MODERATELY FREE │\n",
+       "│ 246        ┆ 3.0                               ┆ VERY INTOLERANT │\n",
+       "│ 247        ┆ 8.0                               ┆ MODERATELY FREE │\n",
+       "│ 248        ┆ 9.0                               ┆ MOSTLY FREE     │\n",
+       "└────────────┴───────────────────────────────────┴─────────────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def get_status(val: float):\n",
+    "    res = None\n",
+    "    for k, v in status.items():\n",
+    "        if val in range(*k):\n",
+    "            res = v\n",
+    "    return res if res else \"COMPLETELY FREE\"\n",
+    "\n",
+    "ti_freedom_right.with_columns(\n",
+    "    status=ti_freedom_right[\"no_interference_of_religious_dogmas\"].map_elements(\n",
+    "        lambda val: get_status(val)\n",
+    "    )\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -106,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
